button width fixed and spacing overall

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    justify-content: space-around;
     position: relative;
     height: 100vh;
     background: linear-gradient(rgba(250, 250, 250, 0.2),rgba(250, 250, 250, 0.2)), url(anthony-delanoix-15928-unsplash.jpg);
@@ -58,7 +57,7 @@ h2{
 }
 
 .start-btn{
-    width: 18%;
+    width: 230px;
     padding: 12px;
     box-shadow: 0 0 5px black;
     border: none;
@@ -66,6 +65,7 @@ h2{
     background-color: black;
     color: rgba(255, 255, 242, 1);
     font-size:100%;
+    cursor: pointer;
 }
 
 .start-btn:hover{
